# QLTracker

./: .env.example  .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  devenv.nix  index.html  next.config.mjs  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vite.config.ts
app/: globals.css  layout.tsx  page.tsx  robots.ts  site.webmanifest  sitemap.ts
apps/: README.md
components/: app-query-provider.tsx  icon.tsx  news-public.tsx  news-rich-editor.tsx  pickup-admin-dashboard.tsx  pickup-admin-fields.tsx  pickup-admin-news-edit.tsx  pickup-admin-news.tsx  pickup-admin-notices.tsx  pickup-admin-servers.tsx  pickup-admin-settings.tsx  pickup-admin-shell.tsx  pickup-admin-slot-detail.tsx  pickup-admin-ui.tsx  root-chrome.tsx  theme-provider.tsx
hooks/: use-image-upload-flow.ts  use-live-servers.ts  use-local-storage.ts  use-pickup-auth.ts  use-pickup-state.ts  use-realtime-player-presence.ts  use-realtime-snapshots.ts  use-server-interactions.tsx  use-server-passwords.ts  use-tracked-players.ts
i18n/: index.ts
lib/: countries.ts  data-export.ts  favorites.ts  image-crop.ts  language-flags.ts  logger.ts  map-ids.json  maps.ts  news-query.ts  open-url.ts  pickup-auth-storage.ts  pickup-country.ts  pickup-log.ts  pickup-mock.ts  pickup.ts  realtime-log.ts  realtime.ts  seo.ts  server-filters-storage.ts  server-filters.ts  server-utils.ts  settings.ts  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: bootstrap.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+594 files in other folders)
