[package]
name = "app"
version = "0.0.1-beta.15"
description = "A Tauri App"
authors = ["isevendeuce"]
license = "MIT"
repository = "https://github.com/Splicho/QLTracker"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
discord-rich-presence = "0.2"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.10.0"
urlencoding = "2.1"
